feat! : Add auth to deployment
